--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -121,4 +121,4 @@ windowrule = idleinhibit focus, mpv # Prevent mpv from idling when focused (for 
 # Keybinds
 # =======================
 
-source= $HOME/.config/hypr/keybinds.conf
+source= /home/{{ target_user }}/.config/hypr/keybinds.conf
