add kitty, mako & swaylock configs

--- a/ansible/roles/hyprland/tasks/main.yml
+++ b/ansible/roles/hyprland/tasks/main.yml
@@ -8,6 +8,7 @@
       - waybar             # Status bar
       - wofi               # App launcher
       - swaylock           # Screen locker
+      - grimblast          # For swaylock --screenshots to work
       - grim               # Screenshot tool (captures screen)
       - slurp              # Screenshot tool (selects region)
       - thunar             # File manager
