--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -58,4 +58,4 @@ bind = , XF86AudioMute, exec, pamixer -t          # Volume Mute (toggle)
 bind = , XF86MonBrightnessUp, exec, light -A 5     # Brightness Up
 bind = , XF86MonBrightnessDown, exec, light -U 5   # Brightness Down
 
-bind = $mainMod, L, exec, swaylock                 # Lock screen
+bind = $mainMod, L, exec, ~/.config/swaylock/lock.sh # Lock screen
