fix indenting and some variables

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: configure arch
-  hosts: "{{ hosts }}"
+  hosts: hosts
   become: true
   vars:
     desktop_environment: hyprland # future
