fix post cleanup

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -30,11 +30,20 @@
         force: yes
         extra_args: "--noconfirm"
     
-    - name: remove unused packages & clean cache
+    - name: gather orphaned packages
+      command: pacman -Qtdq
+      register: orphaned_packages
+      changed_when: false
+      failed_when: orphaned_packages.rc != 0 and "no packages were found" not in orphaned_packages.stderr
+      become: true
+
+    - name: remove orphaned packages
       pacman:
-        clean: yes
+        name: "{{ orphaned_packages }}"
         state: absent
         extra_args: "--noconfirm -Rs"
+      when: orphaned_packages.stdout_lines | length > 0
+      become: true
 
     - name: reboot if needed
       ansible.builtin.reboot:
