--- a/ansible/roles/hyprland/tasks/main.yml
+++ b/ansible/roles/hyprland/tasks/main.yml
@@ -28,9 +28,13 @@
       - mako               # Notification daemon
       - cliphist           # Clipboard history
       - pavucontrol        # PulseAudio/PipeWire volume control
+      - sddm               # login screen
+      # catpuccin sddm dependencies
+      - qt6-svg
+      - qt6-declarative
+      - qt5-quickcontrols2
     state: present
     extra_args: "--noconfirm"
-
 
 - name: install hyprland related yay packages
   shell: |
@@ -38,13 +42,20 @@
     yay -S --noconfirm light
   become: false
 
+- name: enable and start sddm
+  systemd:
+    name: sddm.service
+    enabled: yes
+    state: started
+  beocme: true
+
 - name: create config directories
   file:
     path: "/home/{{ target_user }}/{{ item.path }}"
     state: directory
     owner: "{{ target_user }}"
     group: "{{ target_user }}"
-  with_filetree: "../templates"
+  with_filetree: "../templates/.config"
   when: item.state == "directory"
 
 - name: Render and copy dotfiles
@@ -54,7 +65,33 @@
     owner: "{{ target_user }}"
     group: "{{ target_user }}"
     mode: '0755'
-  with_filetree: "../templates"
+  with_filetree: "../templates/.config"
   when: item.state == "file"
 
+- name: ensure sddm themes directory exists
+  file:
+    path: "/usr/share/sddm/themes
+    state: directory
+    mode: '0755'
 
+- name: download catpuccin sddm theme
+  get_url: 
+    url: https://github.com/catppuccin/sddm/releases/download/v1.0.0/catppuccin-frappe.zip
+    dest: "/tmp/catpuccin-frappe.zip"
+    mode: '0644'
+  become: true
+
+- name: unzip theme to themes directory
+  unarchive:
+    src: /tmp/catpuccin-frappe.zip
+    dest: /usr/share/sddm/themes/
+    remote_src: yes
+    creates: /usr/share/sddm/themes/catpuccin-frappe
+
+- name: create sddm config
+  template:
+    src: sddm.conf
+    dest: /etc/sddm.conf
+    owner: root
+    group: root
+    mode: '0644'
