--- a/ansible/roles/hyprland/templates/sddm.conf
+++ b/ansible/roles/hyprland/templates/sddm.conf
@@ -2,5 +2,5 @@
 Current=catppuccin-frappe
 
 [InputMethod]
-XkbLayout={{ hyprland_kb_layout | default('us') }}
+XkbLayout={{ hyprland_kb_layout | default('ch') }}
 XkbVariant={{ hyprland_kb_variant | default('') }}
