--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -34,6 +34,7 @@
     name:
       - vim
       - wget
+      - unzip
       - htop             # Process viewer
       - ufw              # Firewall
       - networkmanager   # Ensure it's installed (should be from pacstrap)
