fix hyprland config

--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -70,10 +70,6 @@ decoration {
         passes = 1             # Number of blur passes (higher = smoother but more resource intensive)
         vibrancy = 0.16        # How much background color is incorporated into the blur (0 to 1)
     }
-    drop_shadow = true         # Enable drop shadows behind windows
-    shadow_range = 4           # How far the shadow extends
-    shadow_render_power = 3    # How "solid" the shadow is (higher = more solid)
-    col.shadow = rgba(1a1a1aee) # Shadow color (black with 93% opacity)
 }
 
 # =======================
@@ -112,10 +108,10 @@ gestures {
 # =======================
 # Window Rules
 # =======================
-windowrule = float,^(wofi)$      # Make Wofi (app launcher) always float
-windowrule = size 800 600,^(wofi)$ # Set Wofi's initial size
-windowrule = center,^(wofi)$     # Center Wofi on the screen
-windowrule = idleinhibit focus, mpv # Prevent mpv from idling when focused (for videos)
+windowrule = float,class:^(wofi)$      # Make Wofi (app launcher) always float
+windowrule = size 800 600,class:^(wofi)$ # Set Wofi's initial size
+windowrule = center,class:^(wofi)$     # Center Wofi on the screen
+windowrule = idleinhibit focus, class:^(mpv) # Prevent mpv from idling when focused (for videos)
 
 # =======================
 # Keybinds
