install kitty & move config to common role

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -41,6 +41,7 @@
       - vim
       - wget
       - unzip
+      - kitty
       - htop             # Process viewer
       - ufw              # Firewall
       - networkmanager   # Ensure it's installed (should be from pacstrap)
@@ -99,3 +100,22 @@
     name: systemd-timesyncd.service
     enabled: yes
     state: started
+
+- name: create config directories
+  file:
+    path: "/home/{{ target_user }}/.config/{{ item.path }}"
+    state: directory
+    owner: "{{ target_user }}"
+    group: "{{ target_user }}"
+  with_filetree: "../templates/.config"
+  when: item.state == "directory"
+
+- name: Render and copy dotfiles
+  template:
+    src: "{{ item.src }}"
+    dest: "/home/{{ target_user }}/.config/{{ item.path }}"
+    owner: "{{ target_user }}"
+    group: "{{ target_user }}"
+    mode: '0755'
+  with_filetree: "../templates/.config"
+  when: item.state == "file"
