blacklist nouveau driver & don't reboot for localhost

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -32,4 +32,4 @@
 
     - name: reboot if needed
       ansible.builtin.reboot:
-      when: desktop_environment is defined and desktop_environment != 'none'
+      when: desktop_environment is defined and desktop_environment != 'none' and ansible_connection != 'local'
