--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ monitor=DP-1,2560x1440@144,2560x0,1
 # =======================
 # Startup
 # =======================
+exec-once = gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 exec-once = waybar
 exec-once = mako
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
