add keybind to reload waybar

--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -59,3 +59,6 @@ bind = , XF86MonBrightnessUp, exec, light -A 5     # Brightness Up
 bind = , XF86MonBrightnessDown, exec, light -U 5   # Brightness Down
 
 bind = $mainMod, L, exec, ~/.config/swaylock/lock.sh # Lock screen
+
+# Reload waybar
+bind = SUPER SHIFT, W, exec, killall waybar && hyprctl dispatch exec waybar
