remove steam, discord & mailspring, add thunderbird

--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -15,10 +15,8 @@ pacman_packages:
   - neovim
   - code
   - firefox
-  - steam
   - spotify-launcher
-  - discord
+  - thunderbird
 
 yay_packages:
   - 1password
-  - mailspring
