add navigation keybinds

--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -3,7 +3,6 @@ $mainMod = SUPER
 # BASIC WINDOW ACTIONS
 bind = $mainMod, RETURN, exec, kitty          # Open a terminal (change `kitty` to `alacritty`, `foot`, or your preference)
 bind = $mainMod, Q, killactive,               # Close the active window
-bind = $mainMod, M, exit,                     # Exit Hyprland (will log you out)
 bind = $mainMod, E, exec, thunar              # Open file manager
 bind = $mainMod, W, togglefloating,           # Toggle active window between tiled and floating
 bind = $mainMod, F, fullscreen,               # Toggle fullscreen for the active window
@@ -14,6 +13,12 @@ bind = $mainMod, left, movefocus, l           # Focus left
 bind = $mainMod, right, movefocus, r          # Focus right
 bind = $mainMod, up, movefocus, u             # Focus up
 bind = $mainMod, down, movefocus, d           # Focus down
+
+# Move active window
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
