fix multilib path

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -7,7 +7,7 @@
     extra_args: "--noconfirm"
 
 - name: enable multilib
-  lineinfile:
+  blockinfile:
     path: /etc/pacman.conf
     block: | 
       [multilib]
