--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -11,13 +11,11 @@ monitor=DP-1,2560x1440@144,2560x0,1
 # =======================
 exec-once = gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 exec-once = waybar
-exec-once = mako
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = blueman-applet
 exec-once = wl-paste -t text --watch clipboard_history store
-exec-once = swaybg -i ~/Pictures/wallpapers/your_wallpaper.jpg -m fill
-exec-once = udiskie &
 exec-once = ~/.config/hypr/scripts/autostart.sh
+exec-once = swww-daemon
+exec-once = mako # notifications
 
 # =======================
 # Input
