--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -1,60 +1,62 @@
-$mainMod = SUPER
+$cmd = ALT
+$win = SUPER
 
 # BASIC WINDOW ACTIONS
-bind = $mainMod, RETURN, exec, kitty          # Open a terminal (change `kitty` to `alacritty`, `foot`, or your preference)
-bind = $mainMod, Q, killactive,               # Close the active window
-bind = $mainMod, E, exec, thunar              # Open file manager
-bind = $mainMod, W, togglefloating,           # Toggle active window between tiled and floating
-bind = $mainMod, F, fullscreen,               # Toggle fullscreen for the active window
-bind = $mainMod, SPACE, exec, wofi --show drun # Show the application launcher (wofi)
+bind = $cmd, RETURN, exec, kitty
+bind = $cmd, Q, killactive,
+bind = $cmd, SPACE, exec, wofi --show drun 
+
+bind = $win, E, exec, thunar
+bind = $win, W, togglefloating,
+bind = $win SHIFT, M, exec, ~/.config/hypr/scripts/wallpapers.sh
 
 # WORKSPACE NAVIGATION
-bind = $mainMod, left, movefocus, l           # Focus left
-bind = $mainMod, right, movefocus, r          # Focus right
-bind = $mainMod, up, movefocus, u             # Focus up
-bind = $mainMod, down, movefocus, d           # Focus down
+bind = $cmd, H, movefocus, l
+bind = $cmd, L, movefocus, r
+bind = $cmd, K, movefocus, u
+bind = $cmd, J, movefocus, d
 
 # Move active window
-bind = $mainMod SHIFT, left, movewindow, l
-bind = $mainMod SHIFT, right, movewindow, r
-bind = $mainMod SHIFT, up, movewindow, u
-bind = $mainMod SHIFT, down, movewindow, d
+bind = $cmd SHIFT, H, movewindow, l
+bind = $cmd SHIFT, L, movewindow, r
+bind = $cmd SHIFT, K, movewindow, u
+bind = $cmd SHIFT, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $cmd, 1, workspace, 1
+bind = $cmd, 2, workspace, 2
+bind = $cmd, 3, workspace, 3
+bind = $cmd, 4, workspace, 4
+bind = $cmd, 5, workspace, 5
+bind = $cmd, 6, workspace, 6
+bind = $cmd, 7, workspace, 7
+bind = $cmd, 8, workspace, 8
+bind = $cmd, 9, workspace, 9
+bind = $cmd, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $cmd SHIFT, 1, movetoworkspace, 1
+bind = $cmd SHIFT, 2, movetoworkspace, 2
+bind = $cmd SHIFT, 3, movetoworkspace, 3
+bind = $cmd SHIFT, 4, movetoworkspace, 4
+bind = $cmd SHIFT, 5, movetoworkspace, 5
+bind = $cmd SHIFT, 6, movetoworkspace, 6
+bind = $cmd SHIFT, 7, movetoworkspace, 7
+bind = $cmd SHIFT, 8, movetoworkspace, 8
+bind = $cmd SHIFT, 9, movetoworkspace, 9
+bind = $cmd SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1   # Scroll up = next workspace
-bind = $mainMod, mouse_up, workspace, e-1     # Scroll down = previous workspace
+bind = $win, mouse_down, workspace, e+1
+bind = $win, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB (mouse binds)
-bindm = $mainMod, mouse:272, movewindow        # Super + Left Mouse Button to move window
-bindm = $mainMod, mouse:273, resizewindow      # Super + Right Mouse Button to resize window
+bindm = $win, mouse:272, movewindow
+bindm = $win, mouse:273, resizewindow
 
 # SYSTEM/MEDIA CONTROLS
-bind = , Print, exec, grimblast copy screen    # Screenshot whole screen to clipboard
-bind = $mainMod, Print, exec, grimblast copy area # Screenshot selected area to clipboard
+bind = , Print, exec, grimblast copy screen
+bind = $win, Print, exec, grimblast copy area
 
 bind = , XF86AudioRaiseVolume, exec, pamixer -i 5  # Volume Up
 bind = , XF86AudioLowerVolume, exec, pamixer -d 5  # Volume Down
@@ -63,7 +65,5 @@ bind = , XF86AudioMute, exec, pamixer -t          # Volume Mute (toggle)
 bind = , XF86MonBrightnessUp, exec, light -A 5     # Brightness Up
 bind = , XF86MonBrightnessDown, exec, light -U 5   # Brightness Down
 
-bind = $mainMod, L, exec, ~/.config/swaylock/lock.sh # Lock screen
-
-# Reload waybar
-bind = SUPER SHIFT, W, exec, killall waybar && hyprctl dispatch exec waybar
+# [DEBUG] Reload waybar
+bind = $win SHIFT, W, exec, killall waybar && hyprctl dispatch exec waybar
