--- a/ansible/roles/hyprland/templates/.config/mako/config
+++ b/ansible/roles/hyprland/templates/.config/mako/config
@@ -1,44 +1,15 @@
-# Mako Notification Daemon Config
-
-# =======================
-# Global settings
-# =======================
-
 anchor=top-right
-default-timeout=5000
-max-icon-size=64
-font=Hack Nerd Font 10
-
-background-color=#2e3440ee
-text-color=#d8dee9
-
-border-size=1
-border-color=#88c0d0
-default-timeout=5000
-border-radius=8
-
+font=monospace 10
+background-color=#303446
+text-color=#c6d0f5
+width=350
+margin=20,20,0,0
 padding=10
-text-align=left
-width=300
-height=100
+border-size=2
+border-color=#737994
+border-radius=5
+default-timeout=10000
+group-by=summary
 
-ignore-timeout=0
-group-by=app-name
-history=0
-
-format=<span weight="bold">{app_name}</span>\n{summary}\n{body}
-
-# =======================
-# Rules
-# =======================
-[urgency=low]
-background-color=#3b4252ee # Slightly different background
-text-color=#b48ead        # Different text color (Nord purple)
-border-color=#4c566a      # Different border
-default-timeout=3000      # Shorter timeout
-
-[urgency=critical]
-background-color=#bf616aee
-text-color=#eceff4
-border-color=#ebcb8b
-default-timeout=0
+[grouped]
+format=<b>%s</b>\n%b
