--- a/ansible/roles/hyprland/templates/.config/wofi/config
+++ b/ansible/roles/hyprland/templates/.config/wofi/config
@@ -23,3 +23,7 @@ insensitive=true
 allow_markup=true
 no_actions=true
 dynamic_lines=true
+term=kitty
+hide_scroll=true
+print_command=true
+insensitive=true
