--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -28,6 +28,7 @@
       - wget
       - unzip
       - kitty
+      - make
       - linux-headers
       - mesa-utils
       - htop             # Process viewer
