move kitty to hyprland

--- a/ansible/roles/hyprland/tasks/main.yml
+++ b/ansible/roles/hyprland/tasks/main.yml
@@ -4,6 +4,7 @@
 - name: install hyprland related packages
   pacman:
     name:
+      - kitty
       - hyprland           # Wayland compositor
       - waybar             # Status bar
       - wofi               # App launcher
