--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -113,9 +113,9 @@ windowrule = idleinhibit focus, class:^(mpv) # Prevent mpv from idling when focu
 # =======================
 # Keybinds
 # =======================
-source=/home/{{ target_user }}/.config/hypr/keybinds.conf
+source=/home/{{ ansible_user }}/.config/hypr/keybinds.conf
 
 # =======================
 # Additional functionality
 # =======================
-source=/home/{{ target_user }}/.config/hypr/switcher.conf
+source=/home/{{ ansible_user }}/.config/hypr/switcher.conf
