--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -2,13 +2,11 @@
 - name: configure arch
   hosts: hosts
   become: true
-  vars:
-    desktop_environment: hyprland # future
   
   pre_tasks:
     - name: check user permission
       user:
-        name: "{{ target_user }}"
+        name: "{{ ansible_user }}"
         groups: "wheel,audio,video,input,storage"
         append: yes
       when: desktop_environment is defined
@@ -16,11 +14,11 @@
   roles:
     - role: common
     - role: hyprland
-      when: desktop_environment == 'hyprland'
+      when: "'hyprland' in desktop_environments"
+    - role: gnome
+      when: "'gnome' in desktop_environments"
     # - role: kde
-    #   when: desktop_environment == 'kde'
-    # - role: gnome
-    #   when: desktop_environment == 'gnome'
+    #   when: "'kde' in desktop_environments"
 
   post_tasks:
     - name: update & cleanup
@@ -29,7 +27,12 @@
         upgrade: yes
         force: yes
         extra_args: "--noconfirm"
+      become: true
 
     - name: reboot if needed
       ansible.builtin.reboot:
-      when: desktop_environment is defined and desktop_environment != 'none' and ansible_connection != 'local'
+        reboot_timeout: 300
+      when:
+        - desktop_environments is defined
+        - desktop_environments | length > 0
+        - ansible_connection != 'local'
