move sddm conf & kb-layout to common

--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -21,8 +21,8 @@ exec-once = mako # notifications
 # Input
 # =======================
 input {
-    kb_layout = {{ hyprland_kb_layout }}
-    kb_variant = {{ hyprland_kb_variant }}
+    kb_layout = {{ kb_layout }}
+    kb_variant = {{ kb_variant }}
     kb_model =
     kb_options =
     kb_rules =
