--- a/ansible/roles/hyprland/tasks/main.yml
+++ b/ansible/roles/hyprland/tasks/main.yml
@@ -14,6 +14,7 @@
       - xdg-desktop-portal-hyprland
       - xorg-xwayland
       - mako
+      - hyprlock
       - cliphist
       - gnome-keyring
       - libsecret
