--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -3,14 +3,15 @@
 # =======================
 # Monitors
 # =======================
-monitor=DP-1,2560x1440@144,0x0,1
-monitor=DP-2,2560x1440@144,2560x0,1
+monitor=,preferred,auto,1
+monitor=,highrr,auto,1
+monitor=,highres,auto,1.25
 
 # =======================
 # Startup
 # =======================
 exec-once = gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
-exec-once = waybar
+exec-once = waybarsss
 exec-once = blueman-applet
 exec-once = wl-paste -t text --watch clipboard_history store
 exec-once = ~/.config/hypr/scripts/autostart.sh
@@ -21,8 +22,8 @@ exec-once = mako # notifications
 # Input
 # =======================
 input {
-    kb_layout = {{ kb_layout }}
-    kb_variant = {{ kb_variant }}
+    kb_layout = ch
+    kb_variant = 
     kb_model =
     kb_options =
     kb_rules =
@@ -113,9 +114,9 @@ windowrule = idleinhibit focus, class:^(mpv) # Prevent mpv from idling when focu
 # =======================
 # Keybinds
 # =======================
-source=/home/{{ ansible_user }}/.config/hypr/keybinds.conf
+source=/home/luca/.config/hypr/keybinds.conf
 
 # =======================
 # Additional functionality
 # =======================
-source=/home/{{ ansible_user }}/.config/hypr/switcher.conf
+source=/home/luca/.config/hypr/switcher.conf
