--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -7,6 +7,10 @@ monitor=,preferred,auto,1
 monitor=,highrr,auto,1
 monitor=,highres,auto,1.25
 
+# own
+monitor=DP-1,2560x1440@144,0x0,1
+monitor=DP-3,2560x1440@144,2560x0,1
+
 # =======================
 # Startup
 # =======================
