add powermenu (wlogout) keybind

--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -10,6 +10,8 @@ bind = $win, E, exec, thunar
 bind = $win, W, togglefloating,
 bind = $win SHIFT, M, exec, ~/.config/hypr/scripts/wallpapers.sh
 
+bind = $cmd SHIFT, P, exec, wlogout
+
 # WORKSPACE NAVIGATION
 bind = $cmd, H, movefocus, l
 bind = $cmd, L, movefocus, r
