--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=DP-3,2560x1440@144,2560x0,1
 # Startup
 # =======================
 exec-once = gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
-exec-once = waybarsss
+exec-once = waybar
 exec-once = blueman-applet
 exec-once = wl-paste -t text --watch clipboard_history store
 exec-once = ~/.config/hypr/scripts/autostart.sh
