--- a/ansible/roles/gnome/tasks/main.yml
+++ b/ansible/roles/gnome/tasks/main.yml
@@ -14,6 +14,7 @@
       - gnome-keyring
       - libsecret
       - seahorse
+      - thunar
     state: present
     extra_args: "--noconfirm"
   become: true
