use yazi instead of dolphin

--- a/ansible/roles/hyprland/tasks/main.yml
+++ b/ansible/roles/hyprland/tasks/main.yml
@@ -19,7 +19,7 @@
       - gnome-keyring
       - libsecret
       - seahorse
-      - dolphin
+      - yazi
     state: present
     extra_args: "--noconfirm"
 
