change keybind to open yazi

--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -6,7 +6,7 @@ bind = $cmd, RETURN, exec, kitty
 bind = $cmd, Q, killactive,
 bind = $cmd, SPACE, exec, wofi --show drun 
 
-bind = $win, E, exec, dolphin
+bind = $win, E, exec, kitty yazi
 bind = $win, W, togglefloating,
 bind = $win SHIFT, M, exec, ~/.config/hypr/scripts/wallpapers.sh
 
